@@ -1,3 +1,17 @@
 # Color_Switch
 I have implemented an android game named color switch using javafx as my college group project. 
-Other memeber of my team - Nitin Kumar Das 
+
+
+Memeber of my team - Nitin Kumar Das ( github handle - NITIN23329)
+
+In order to run this code on intellij follow following steps - 
+
+first install javafx SDK ( website - https://gluonhq.com/products/javafx/ )
+
+then FILE->Project Structure->Libraries then click on plus(+) icon then add javafx-sdk lib ( go inside above downloaded folder)
+
+then run MainWindowMain file inside this folder but before this click on edit configuration and add this code - 
+
+add in VM options -> --module-path "C:\javafx-sdk-15.0.1\lib" --add-modules javafx.controls,javafx.media,javafx.fxml
+
+Thanks :-)
